# lunalab_summit_xl_gen

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  lunalab_summit_xl_gen.repos
.docker/: build.bash  run.bash
.git_hooks/: pre-commit_convert_xacros.bash
lunalab_summit_xl_gen/: CMakeLists.txt  README.md  package.xml
lunalab_summit_xl_gen_control/: CMakeLists.txt  README.md  package.xml
lunalab_summit_xl_gen_control/config/: j2s7s300_parameters.yaml  summit_xl_parameters.yaml
lunalab_summit_xl_gen_control/config/robotnik_base_hw/: summit_xl_robotnik_base_hw.yaml  summit_xl_robotnik_base_hw_limits.yaml
lunalab_summit_xl_gen_control/launch/: j2s7s300_control.launch  summit_xl_control.launch  summit_xl_gen_control.launch
lunalab_summit_xl_gen_description/: CMakeLists.txt  README.md  package.xml
lunalab_summit_xl_gen_description/config/: initial_joint_positions.yaml
lunalab_summit_xl_gen_description/launch/: view.launch.py  view_ign.launch.py
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/: model.config  model.sdf
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/kinova/collision/: arm_half_1.stl  arm_half_2.stl  base.stl  finger_distal.stl  finger_proximal.stl  forearm.stl  hand_3finger.stl  shoulder.stl  wrist_spherical_1.stl  wrist_spherical_2.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/kinova/visual/: arm_half_1.dae  arm_half_2.dae  base.dae  finger_distal.dae  finger_proximal.dae  forearm.dae  hand_3finger.dae  ring_big.dae  ring_small.dae  shoulder.dae  wrist_spherical_1.dae  wrist_spherical_2.dae
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/misc/collision/: external_devices.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/lidar/collision/: chassis_mount.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/lidar/visual/: chassis_mount.dae
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/realsense_d435/collision/: realsense_d435.stl  realsense_d435_mount1.stl  realsense_d435_mount2.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/realsense_d435/visual/: realsense_d435.dae  realsense_d435_mount1.dae  realsense_d435_mount2.dae
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/realsense_d455/collision/: realsense_d455.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/realsense_d455/visual/: pole_mount.dae  realsense_d455.dae
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/realsense_l515/collision/: realsense_l515.stl  wrist_mount.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/sensors/realsense_l515/visual/: realsense_l515.dae  wrist_mount.dae
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/summit_xl/collision/: summit_xl_chassis.stl
lunalab_summit_xl_gen_description/lunalab_summit_xl_gen/meshes/summit_xl/visual/: rubber_wheel_left.dae  rubber_wheel_right.dae  summit_xl_chassis.dae
lunalab_summit_xl_gen_description/rviz/: view.rviz
lunalab_summit_xl_gen_description/scripts/: estimate_inertial_properties.py  xacro2sdf.bash  xacro2urdf.bash
lunalab_summit_xl_gen_description/urdf/: lunalab_summit_xl_gen.gazebo  lunalab_summit_xl_gen.urdf  lunalab_summit_xl_gen.urdf.xacro  lunalab_summit_xl_manipulators.xacro  lunalab_summit_xl_misc.xacro  lunalab_summit_xl_sensors.xacro
lunalab_summit_xl_gen_description/urdf/manipulators/kinova/: j2s7s300.xacro  kinova.gazebo  kinova.ros2_control  kinova_common.xacro  kinova_finger_set.xacro  kinova_inertial.xacro
lunalab_summit_xl_gen_description/urdf/misc/: external_devices.xacro
lunalab_summit_xl_gen_description/urdf/sensors/: lidar.xacro  realsense_d435.xacro  realsense_d455.xacro  realsense_l515.xacro
lunalab_summit_xl_gen_description/urdf/summit_xl/: rubber_wheel.xacro  summit.gazebo  summit_xl.gazebo  summit_xl.ros2_control  summit_xl.xacro  summit_xl_base.xacro
lunalab_summit_xl_gen_ign/: CMakeLists.txt  README.md  package.xml
lunalab_summit_xl_gen_ign/examples/: ex_follow_target.py  ex_moveit_follow_target.py
lunalab_summit_xl_gen_ign/examples/robots/: __init__.py  lunalab_summit_xl_gen.py
lunalab_summit_xl_gen_ign/launch/: bridge.launch.py  ex_moveit_follow_target.launch.py
lunalab_summit_xl_gen_ign/launch/examples/: default.launch.py  ex_py_follow_target.launch.py
lunalab_summit_xl_gen_ign/launch/examples/robots/: robot_lunalab_summit_xl_gen.launch.py
lunalab_summit_xl_gen_ign/launch/examples/worlds/: world_follow_target.launch.py
lunalab_summit_xl_gen_ign/rviz/: ign_moveit.rviz  ign_moveit2.rviz
lunalab_summit_xl_gen_ign/worlds/: follow_target.sdf  moveit_follow_target.sdf
lunalab_summit_xl_gen_moveit_config/: CMakeLists.txt  README.md  package.xml
lunalab_summit_xl_gen_moveit_config/config/: controllers.yaml  controllers_effort.yaml  controllers_position,velocity.yaml  controllers_position.yaml  controllers_velocity.yaml  joint_limits.yaml  joint_limits_conservative.yaml  joint_limits_real.yaml  joint_limits_real_safe.yaml  joint_limits_slow.yaml  joint_limits_very_slow.yaml  kinematics.yaml  moveit_controller_manager.yaml  moveit_controller_manager_ros1_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  servo.yaml  servo_real.yaml
lunalab_summit_xl_gen_moveit_config/launch/: ex_fake_control.launch.py  ex_ign_control.launch.py  fake_control.launch.py  move_group.launch.py  move_group_ros1_controllers.launch.py
lunalab_summit_xl_gen_moveit_config/rviz/: moveit.rviz
lunalab_summit_xl_gen_moveit_config/scripts/: xacro2srdf.bash
lunalab_summit_xl_gen_moveit_config/srdf/: lunalab_summit_xl_gen.srdf  lunalab_summit_xl_gen.srdf.xacro  lunalab_summit_xl_gen_j2s7s300.xacro  lunalab_summit_xl_manipulators.xacro
