<?xml version="1.0"?>
<package format="3">
  <name>lunalab_summit_xl_gen_description</name>
  <version>1.0.0</version>
  <description>URDF and SDF description of Summit XL-GEN (LunaLab variant)</description>
  <maintainer email="TODO@uni.lu">TODO</maintainer>
  <author>TODO</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
