<?xml version="1.0"?>
<package format="3">
  <name>lunalab_summit_xl_gen_ign</name>
  <version>1.0.0</version>
  <description>Ignition Gazebo-specific configuration of Summit XL-GEN (LunaLab variant)</description>
  <maintainer email="andrejorsula@uni.lu">Andrej Orsula</maintainer>
  <author>Andrej Orsula</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lunalab_summit_xl_gen_description</exec_depend>
  <exec_depend>lunalab_summit_xl_gen_moveit_config</exec_depend>

  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
