<?xml version="1.0"?>
<package format="3">
  <name>lunalab_summit_xl_gen_moveit_config</name>
  <version>1.0.0</version>
  <description>MoveIt configuration for manipulator attached to Summit XL-GEN (LunaLab variant)</description>
  <maintainer email="TODO@uni.lu">TODO</maintainer>
  <author>TODO</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lunalab_summit_xl_gen_description</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
